# django_project

01_IntroductionToWebFrameworks/firstapp/Scripts/: activate  activate.bat  django-admin.py
01_IntroductionToWebFrameworks/todo/: db.sqlite3
01_IntroductionToWebFrameworks/todo/tasks/: views.py
02_IntroductionToDjango/board/advertisements/: urls.py  views.py
02_IntroductionToDjango/board/board/: settings.py
02_IntroductionToDjango/gdz_skillbox/: pyvenv.cfg
02_IntroductionToDjango/gdz_skillbox/Scripts/: activate  activate.bat  django-admin.py
03_RequestsHandlingInDjango/board/advertisements/: urls.py  views.py
03_RequestsHandlingInDjango/board/board/: settings.py
04_DatabasesAndModels/board/: manage.py
04_DatabasesAndModels/board/advertisements_app/: admin.py  models.py  urls.py  views.py
04_DatabasesAndModels/board/board/: urls.py
M_15_queries/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
M_15_queries/mysite/blogapp/: models.py  urls.py  views.py
M_15_queries/mysite/blogapp/management/commands/: article_create.py  create_author.py  create_category.py
M_15_queries/mysite/blogapp/templates/blogapp/: article_list.html
M_15_queries/mysite/mysite/: settings.py  sitemaps.py  urls.py  wsgi.py
M_15_queries/mysite/shopapp/: admin.py  admin_mixins.py  auxiliary_func.py  forms.py  models.py  serializers.py  sitemap.py  urls.py  views.py
M_15_queries/mysite/shopapp/templates/admin/: json_form.html
M_15_queries/mysite/shopapp/templates/shopapp/: orders_changelist.html  user-orders-list.html
M_19_prod/: pyproject.toml
(+96 files in other folders)
