[tool.poetry]
name = "m-15-queries"
version = "0.1.0"
description = ""
authors = ["liverpool <fleetvord@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.6"
djangorestframework = "3.14.0"
asgiref = "3.5.2"
certifi = "2023.5.7"
django-debug-toolbar = "4.1.0"
django-filter = "22.1"
django-taggit = "4.0.0"
gunicorn = "20.1.0"
pillow = "9.4.0"
pytz = "2022.7.1"
sentry-sdk = "1.27.1"
sqlparse = "0.4.2"
urllib3 = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
